# plst3

./: .gitignore  Cargo.toml  README.md  dev.sh  package-lock.json  package.json  start.sh  tsconfig.json
bundler/: Cargo.toml
bundler/src/: main.rs
bundler/src/bundler/: rsass.rs  swc.rs
migrations/2024-01-21-120514_medias/: down.sql  up.sql
migrations/2024-02-12-203916_media_views/: down.sql  up.sql
migrations/2024-02-13-070435_alt_metadata/: down.sql  up.sql
public/scripts/: htmx-error.js  tabbed-button-group.ts  toggle-header.ts  transition-fix.ts  watch-socket.ts  watch.ts  yt-embed-player.ts
public/styles/: controller.scss  default.scss  header.scss  player-details.scss  player.scss  sidebar-nav.scss  watch-select.scss
src/: main.rs  schema.rs
src/bundler/: asset.rs  mod.rs  swc.rs
src/context/: app.rs  mod.rs  mpris.rs  playlist.rs  ssr.rs  static_files.rs  ws.rs
src/db/: media.rs  mod.rs  playlist.rs  playlist_item.rs
src/resolvers/: local.rs  mod.rs  youtube.rs
templates/: controller.stpl  header.stpl  index.stpl  navbar.stpl  playlist-get.stpl  watch.stpl  watch_select.stpl
