workspace = { members = ["bundler"] }
[package]
name = "plst3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["ws", "multipart", "macros", "form", "json"] }
diesel = { version = "2.1.4", features = ["sqlite", "r2d2", "time", "returning_clauses_for_sqlite_3_35"], default-features = false }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
futures = { version = "0.3.30", default-features = false }
notify-rust = "4.10.0"
r2d2 = "0.8.10"
sailfish = { version = "0.8.3", default-features = false, features = ["perf-inline", "config", "derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
souvlaki = { version = "0.7.0", default-features = false, features = ["use_zbus"] }
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["serde"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "fs"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "compression-gzip", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
youtube_dl = { version = "0.9.0", features = ["tokio"] }
