[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ctrlc = { version = "3.4.2", features = ["termination"] }
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
pollster = { version = "0.3.0", features = ["macro"] }
reqwest = "0.11.23"
rsass = "0.28.8"
swc = "0.290.0"
swc_common = "0.40.1"
swc_ecma_ast = "0.121.1"
swc_ecma_codegen = "0.158.1"
swc_ecma_parser = "0.152.1"
swc_ecma_transforms_typescript = "0.203.0"
swc_ecma_visit = "0.107.0"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.4.0"
